<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#505050"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/seven"
        style="@style/RegularButton"
        android:text="@string/seven"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline3"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline2" />

    <Button
        android:id="@+id/four"
        style="@style/RegularButton"
        android:text="@string/four"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline5"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideline4" />

    <Button
        android:id="@+id/zero"
        style="@style/RegularButton"
        android:text="@string/zero"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline9"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline8" />

    <Button
        android:id="@+id/three"
        style="@style/RegularButton"
        android:text="@string/three"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline7"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline6" />

    <Button
        android:id="@+id/two"
        style="@style/RegularButton"
        android:text="@string/two"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline7"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline6" />

    <Button
        android:id="@+id/eight"
        style="@style/RegularButton"
        android:text="@string/eight"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline2" />

    <Button
        android:id="@+id/nine"
        style="@style/RegularButton"
        android:text="@string/nine"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline2" />

    <Button
        android:id="@+id/five"
        style="@style/RegularButton"
        android:text="@string/five"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline5"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideline4" />

    <Button
        android:id="@+id/six"
        style="@style/RegularButton"
        android:text="@string/six"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline5"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideline4" />

    <Button
        android:id="@+id/one"
        style="@style/RegularButton"
        android:text="@string/one"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline7"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline6" />

    <Button
        android:id="@+id/dot"
        style="@style/RegularButton"
        android:text="@string/dot"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline9"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline8" />

    <Button
        android:id="@+id/plus"
        style="@style/OperationButton"
        android:text="@string/plus"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline5"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideline4" />

    <Button
        android:id="@+id/minus"
        style="@style/OperationButton"
        android:text="@string/minus"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline2" />

    <Button
        android:id="@+id/multiplication"
        style="@style/OperationButton"
        android:text="@string/multiplication"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline" />

    <Button
        android:id="@+id/equals"
        style="@style/OperationButton"
        android:text="@string/equals"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline9"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline6" />

    <Button
        android:id="@+id/division"
        style="@style/OperationButton"
        android:text="@string/division"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline" />

    <Button
        android:id="@+id/clearButton"
        style="@style/ClearButton"
        android:text="@string/clear"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline1"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline" />

    <Button
        android:id="@+id/procentButton"
        style="@style/OperationButton"
        android:text="@string/procent"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideline11">

        <TextView
            android:id="@+id/operationField"
            style="@style/TextViewStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />



        <TextView
            android:id="@+id/resultField"
            style="@style/TextViewStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.247" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.488" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.268" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.509" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.729" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.374" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.478" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.488" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.592" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.602" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.707" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.717" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.821" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.831" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.935" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.271" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.064" />


</androidx.constraintlayout.widget.ConstraintLayout>